# flask_sqlalchemy_basics

./: .gitignore  README.md  main.py  pyproject.toml
instance/: db.sqlite3
