[tool.poetry]
name = "flask-sqlalchemy-basics"
version = "0.1.0"
description = "Exercise. Create a db using flask_sqlalchemy and sqlite3. Also uses fake library in order to create a random fake db and manipulate it."
authors = ["None"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
faker = "^21.0.0"
flask = "^3.0.0"
flask-sqlalchemy = "^3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
